--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,6 @@ dependencies = [
         "lazy-property",
         "neuroglancer",
         "torch",
-        "fibsem_tools >= 6.0, <=6.3",
         "attrs",
         "bokeh",
         "numpy-indexed>=0.3.7",
@@ -47,8 +46,8 @@ dependencies = [
         "funlib.geometry>=0.2",
         "mwatershed>=0.5.2",
         "cellmap-models",
-        "funlib.persistence>=0.5.3",
-        "gunpowder>=1.4",
+        "funlib.persistence==0.4.0",
+        "gunpowder>=1.3",
         "lsds",
         "xarray",
         "cattrs",
